yellow tint, index.html button fix, overflow fix, small button changes

--- a/calendar.css
+++ b/calendar.css
@@ -5,7 +5,7 @@
     position: relative;
     max-width: 1200px;
     margin: 0 auto;
-    margin-top: 200px;
+    margin-top: 250px;
 }
 
 /*The actual timeline (the vertical ruler)*/
@@ -146,8 +146,8 @@
   .dropdown {
     position: fixed;
     display: inline-block;
-    top: 100px;
-    left: 87%;
+    top: 60px;
+    left: 71%;
     z-index: 10;
     display: none;
   }
