--- a/menubarsave.css
+++ b/menubarsave.css
@@ -114,7 +114,7 @@ body {
     font-size: larger;
     padding-bottom: 0px;
     position: fixed;
-    left: 90%;
+    left: 80%;
     z-index: 10;
 }
 /* hvis vi vil lage en visuell bekreftelse på at knappen er trykka på/aktiv
@@ -132,8 +132,8 @@ for eksempel lage en border eller bakgrunnsfarge*/
     bottom: 0;
     height: 100%;
     width: 100%;
-    background-color: rgb(12, 12, 17);
-    opacity: 0.5;
+    background-color: yellow;
+    opacity: 0.95;
     display: none;
     z-index: 100;
 }
